# OpenRA-RL-Rust

./: .gitignore  Dockerfile
docs/: ARCHITECTURE.md
openra-data/: Cargo.toml
openra-data/src/: lib.rs  orarep.rs  palette.rs  shp.rs
openra-data/tests/: map_parse.rs  replay_parse.rs
openra-sim/: Cargo.toml
openra-sim/src/: actor.rs  ai.rs  gamerules.rs  lib.rs  math.rs  rng.rs  terrain.rs  traits.rs  world.rs
openra-sim/tests/: bot_smoke.rs  debug_sync.rs  sync_hash_verify.rs
openra-wasm/: Cargo.toml
openra-wasm/src/: lib.rs
openra-wasm/www/: index.html  index.js
